{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 549,
  "lineage": "79fc2dd3-4008-a6d8-24ca-6ad73ca4c4a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eab64558c96a52fd",
            "arn": "arn:aws:ec2:eu-central-1:288761763515:elastic-ip/eipalloc-0eab64558c96a52fd",
            "domain": "vpc",
            "id": "eipalloc-0eab64558c96a52fd",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-63-181-144-36.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.181.144.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cs3-nca-nat-eip",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-nat-eip",
              "Project": "cs3-nca"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "management_windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-032c954118df38cd0",
            "arn": "arn:aws:ec2:eu-central-1:288761763515:instance/i-034f27ba77c9a100d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cs3-nca-mgmt-ssm-profile",
            "id": "i-034f27ba77c9a100d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "ec2_anouar",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b3feb05ed131a344",
            "private_dns": "ip-10-0-1-155.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.155",
            "public_dns": "ec2-3-121-112-117.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.121.112.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-central-1:288761763515:key/c2cce65e-53b8-4692-90a8-e2bcaa50ef92",
                "throughput": 0,
                "volume_id": "vol-0da87da82b19bbb40",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dfe8d5be71fddf31",
            "tags": {
              "Name": "cs3-nca-mgmt",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-mgmt",
              "Project": "cs3-nca"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e95076ebb9b403f8"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.management_ssm_profile",
            "aws_iam_role.management_ssm_role",
            "aws_security_group.management_sg",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_ami.windows"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:internet-gateway/igw-07f42bcfaed900760",
            "id": "igw-07f42bcfaed900760",
            "owner_id": "288761763515",
            "tags": {
              "Name": "cs3-nca-igw",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-igw",
              "Project": "cs3-nca"
            },
            "vpc_id": "vpc-040596582b76660f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eab64558c96a52fd",
            "association_id": "eipassoc-081396c5ad517da60",
            "connectivity_type": "public",
            "id": "nat-07e9e3e0c4ef1c95c",
            "network_interface_id": "eni-072d684e9e86ffd16",
            "private_ip": "10.0.1.59",
            "public_ip": "63.181.144.36",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dfe8d5be71fddf31",
            "tags": {
              "Name": "cs3-nca-nat",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-nat",
              "Project": "cs3-nca"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:route-table/rtb-06520aee88226fe9f",
            "id": "rtb-06520aee88226fe9f",
            "owner_id": "288761763515",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07e9e3e0c4ef1c95c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cs3-nca-private-rt",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-private-rt",
              "Project": "cs3-nca"
            },
            "timeouts": null,
            "vpc_id": "vpc-040596582b76660f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:route-table/rtb-04dd1b472c36281cb",
            "id": "rtb-04dd1b472c36281cb",
            "owner_id": "288761763515",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f42bcfaed900760",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cs3-nca-public-rt",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-public-rt",
              "Project": "cs3-nca"
            },
            "timeouts": null,
            "vpc_id": "vpc-040596582b76660f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e30b3d76b5f1d393",
            "route_table_id": "rtb-06520aee88226fe9f",
            "subnet_id": "subnet-020c05c9ddb4354f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093540a4db40d2669",
            "route_table_id": "rtb-06520aee88226fe9f",
            "subnet_id": "subnet-02e608ced5e035512"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0186a2045f1feb89c",
            "route_table_id": "rtb-04dd1b472c36281cb",
            "subnet_id": "subnet-0dfe8d5be71fddf31"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2fbdf18337b2f61",
            "route_table_id": "rtb-04dd1b472c36281cb",
            "subnet_id": "subnet-09ca9f80f78655706"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:security-group/sg-079b9be6f110c0ab7",
            "description": "Allow SSM and RDP for worker EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079b9be6f110c0ab7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow RDP from anywhere (test)",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "cs3-nca-worker-sg",
            "name_prefix": "",
            "owner_id": "288761763515",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-040596582b76660f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:security-group/sg-0734d1bea9ed2d1f4",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0734d1bea9ed2d1f4",
            "ingress": [],
            "name": "cs3-nca-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "288761763515",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cs3-nca-eks-cluster-sg",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-eks-cluster-sg",
              "Project": "cs3-nca"
            },
            "timeouts": null,
            "vpc_id": "vpc-040596582b76660f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "management_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:security-group/sg-0e95076ebb9b403f8",
            "description": "SG for management Windows instance (RDP + SSM)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e95076ebb9b403f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "10.0.11.0/24",
                  "10.0.12.0/24"
                ],
                "description": "",
                "from_port": 445,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 445
              }
            ],
            "name": "cs3-nca-mgmt-sg",
            "name_prefix": "",
            "owner_id": "288761763515",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-040596582b76660f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:security-group/sg-064db00218ee4df6e",
            "description": "Security group for interface VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064db00218ee4df6e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow VPC traffic to endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cs3-nca-vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "288761763515",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cs3-nca-vpc-endpoints-sg",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-vpc-endpoints-sg",
              "Project": "cs3-nca"
            },
            "timeouts": null,
            "vpc_id": "vpc-040596582b76660f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:subnet/subnet-020c05c9ddb4354f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020c05c9ddb4354f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288761763515",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs3-nca-private-a",
              "Project": "cs3-nca",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "cs3-nca-private-a",
              "Project": "cs3-nca",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-040596582b76660f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:subnet/subnet-02e608ced5e035512",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e608ced5e035512",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "288761763515",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs3-nca-private-b",
              "Project": "cs3-nca",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "cs3-nca-private-b",
              "Project": "cs3-nca",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-040596582b76660f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:subnet/subnet-0dfe8d5be71fddf31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfe8d5be71fddf31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "288761763515",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs3-nca-public-a",
              "Project": "cs3-nca",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "cs3-nca-public-a",
              "Project": "cs3-nca",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-040596582b76660f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:subnet/subnet-09ca9f80f78655706",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ca9f80f78655706",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "288761763515",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cs3-nca-public-b",
              "Project": "cs3-nca",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "cs3-nca-public-b",
              "Project": "cs3-nca",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-040596582b76660f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:vpc/vpc-040596582b76660f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ba58f664ec883c63",
            "default_route_table_id": "rtb-0c4a7dbdcf5dd6854",
            "default_security_group_id": "sg-01f1a7858b09bdd44",
            "dhcp_options_id": "dopt-0083c290cc4c0c39e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-040596582b76660f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c4a7dbdcf5dd6854",
            "owner_id": "288761763515",
            "tags": {
              "Name": "cs3-nca-vpc",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-vpc",
              "Project": "cs3-nca"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:vpc-endpoint/vpce-01834b7ddf13046fa",
            "cidr_blocks": [
              "35.71.105.128/26",
              "52.94.17.0/24",
              "35.71.105.0/25"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01834b7ddf13046fa",
            "ip_address_type": "ipv4",
            "owner_id": "288761763515",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-66a5400f",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-06520aee88226fe9f"
            ],
            "service_name": "com.amazonaws.eu-central-1.dynamodb",
            "service_region": "eu-central-1",
            "state": "available",
            "tags": {
              "Name": "cs3-nca-dynamodb-endpoint",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-dynamodb-endpoint",
              "Project": "cs3-nca"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-040596582b76660f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:vpc-endpoint/vpce-0be7fd5658964154d",
            "dns_entry": [
              {
                "dns_name": "vpce-0be7fd5658964154d-x7xkk8bd.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0be7fd5658964154d-x7xkk8bd-eu-central-1a.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0be7fd5658964154d-x7xkk8bd-eu-central-1b.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ec2messages.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z0609366E2IHD2YEWLZO"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0be7fd5658964154d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0766527748f3122c0",
              "eni-08a1ddd2b3ea72374"
            ],
            "owner_id": "288761763515",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-064db00218ee4df6e"
            ],
            "service_name": "com.amazonaws.eu-central-1.ec2messages",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.20",
                "subnet_id": "subnet-020c05c9ddb4354f9"
              },
              {
                "ipv4": "10.0.12.148",
                "subnet_id": "subnet-02e608ced5e035512"
              }
            ],
            "subnet_ids": [
              "subnet-020c05c9ddb4354f9",
              "subnet-02e608ced5e035512"
            ],
            "tags": {
              "Name": "cs3-nca-ec2messages-endpoint",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-ec2messages-endpoint",
              "Project": "cs3-nca"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-040596582b76660f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:vpc-endpoint/vpce-0136fba1ea8033876",
            "dns_entry": [
              {
                "dns_name": "vpce-0136fba1ea8033876-qeshne8z.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0136fba1ea8033876-qeshne8z-eu-central-1b.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0136fba1ea8033876-qeshne8z-eu-central-1a.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "api.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z08932732GDST39CQ6QST"
              },
              {
                "dns_name": "ecr.eu-central-1.api.aws",
                "hosted_zone_id": "Z0894602BFD5QNVDT3CW"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0136fba1ea8033876",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-011c605108925cff3",
              "eni-05ab13c1deb990b00"
            ],
            "owner_id": "288761763515",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-064db00218ee4df6e"
            ],
            "service_name": "com.amazonaws.eu-central-1.ecr.api",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.104",
                "subnet_id": "subnet-020c05c9ddb4354f9"
              },
              {
                "ipv4": "10.0.12.120",
                "subnet_id": "subnet-02e608ced5e035512"
              }
            ],
            "subnet_ids": [
              "subnet-020c05c9ddb4354f9",
              "subnet-02e608ced5e035512"
            ],
            "tags": {
              "Name": "cs3-nca-ecr-api-endpoint",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-ecr-api-endpoint",
              "Project": "cs3-nca"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-040596582b76660f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:vpc-endpoint/vpce-0e28efafc494bc1b7",
            "dns_entry": [
              {
                "dns_name": "vpce-0e28efafc494bc1b7-lst3pbrd.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0e28efafc494bc1b7-lst3pbrd-eu-central-1b.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0e28efafc494bc1b7-lst3pbrd-eu-central-1a.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "dkr.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z02954722HI1BMCNI0JUI"
              },
              {
                "dns_name": "*.dkr.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z02954722HI1BMCNI0JUI"
              },
              {
                "dns_name": "dkr-ecr.eu-central-1.on.aws",
                "hosted_zone_id": "Z08936121VLLJJ9EDTMFA"
              },
              {
                "dns_name": "*.dkr-ecr.eu-central-1.on.aws",
                "hosted_zone_id": "Z08936121VLLJJ9EDTMFA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e28efafc494bc1b7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00ecf7fd5fa8f0da9",
              "eni-0ee1993689078a601"
            ],
            "owner_id": "288761763515",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-064db00218ee4df6e"
            ],
            "service_name": "com.amazonaws.eu-central-1.ecr.dkr",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.191",
                "subnet_id": "subnet-020c05c9ddb4354f9"
              },
              {
                "ipv4": "10.0.12.80",
                "subnet_id": "subnet-02e608ced5e035512"
              }
            ],
            "subnet_ids": [
              "subnet-020c05c9ddb4354f9",
              "subnet-02e608ced5e035512"
            ],
            "tags": {
              "Name": "cs3-nca-ecr-dkr-endpoint",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-ecr-dkr-endpoint",
              "Project": "cs3-nca"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-040596582b76660f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:vpc-endpoint/vpce-045332f97737b2fce",
            "dns_entry": [
              {
                "dns_name": "vpce-045332f97737b2fce-vxfv2k8c.logs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-045332f97737b2fce-vxfv2k8c-eu-central-1b.logs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-045332f97737b2fce-vxfv2k8c-eu-central-1a.logs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "logs.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z02949431CNZSZ000ZZK0"
              },
              {
                "dns_name": "logs.eu-central-1.api.aws",
                "hosted_zone_id": "Z01692452X2IIWVH0GZEF"
              },
              {
                "dns_name": "streaming-logs.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z016868528TA5NE7NPG71"
              },
              {
                "dns_name": "streaming-logs.eu-central-1.api.aws",
                "hosted_zone_id": "Z08997311VXFW6VJ2WOBT"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-045332f97737b2fce",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01373e153107faeed",
              "eni-04800748ceed79505"
            ],
            "owner_id": "288761763515",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-064db00218ee4df6e"
            ],
            "service_name": "com.amazonaws.eu-central-1.logs",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.118",
                "subnet_id": "subnet-020c05c9ddb4354f9"
              },
              {
                "ipv4": "10.0.12.63",
                "subnet_id": "subnet-02e608ced5e035512"
              }
            ],
            "subnet_ids": [
              "subnet-020c05c9ddb4354f9",
              "subnet-02e608ced5e035512"
            ],
            "tags": {
              "Name": "cs3-nca-logs-endpoint",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-logs-endpoint",
              "Project": "cs3-nca"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-040596582b76660f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:vpc-endpoint/vpce-0aeb91bc09ee7113a",
            "cidr_blocks": [
              "52.219.44.0/22",
              "52.219.208.0/22",
              "3.5.136.0/22",
              "52.219.218.0/24",
              "52.219.140.0/24",
              "16.12.32.0/22",
              "52.219.72.0/22",
              "16.15.20.0/22",
              "3.5.134.0/23",
              "16.12.24.0/21",
              "52.219.168.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0aeb91bc09ee7113a",
            "ip_address_type": "ipv4",
            "owner_id": "288761763515",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ea54007",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-06520aee88226fe9f"
            ],
            "service_name": "com.amazonaws.eu-central-1.s3",
            "service_region": "eu-central-1",
            "state": "available",
            "tags": {
              "Name": "cs3-nca-s3-endpoint",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-s3-endpoint",
              "Project": "cs3-nca"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-040596582b76660f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:vpc-endpoint/vpce-06a9bc454f09b8090",
            "dns_entry": [
              {
                "dns_name": "vpce-06a9bc454f09b8090-08s7ju97.sns.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-06a9bc454f09b8090-08s7ju97-eu-central-1a.sns.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-06a9bc454f09b8090-08s7ju97-eu-central-1b.sns.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "sns.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z07273603DGKOE01B3Q5Z"
              },
              {
                "dns_name": "sns.eu-central-1.api.aws",
                "hosted_zone_id": "Z07255907KWHRJAKYR9D"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06a9bc454f09b8090",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-044a98f49b8743d7d",
              "eni-0d5544c07c8b2f93f"
            ],
            "owner_id": "288761763515",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-064db00218ee4df6e"
            ],
            "service_name": "com.amazonaws.eu-central-1.sns",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.70",
                "subnet_id": "subnet-020c05c9ddb4354f9"
              },
              {
                "ipv4": "10.0.12.231",
                "subnet_id": "subnet-02e608ced5e035512"
              }
            ],
            "subnet_ids": [
              "subnet-020c05c9ddb4354f9",
              "subnet-02e608ced5e035512"
            ],
            "tags": {
              "Name": "cs3-nca-sns-endpoint",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-sns-endpoint",
              "Project": "cs3-nca"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-040596582b76660f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:vpc-endpoint/vpce-0e4246ad194765a4b",
            "dns_entry": [
              {
                "dns_name": "vpce-0e4246ad194765a4b-r5qdtk5k.sqs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0e4246ad194765a4b-r5qdtk5k-eu-central-1a.sqs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0e4246ad194765a4b-r5qdtk5k-eu-central-1b.sqs.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "sqs.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z029543938UBLF9KF9PBJ"
              },
              {
                "dns_name": "sqs.eu-central-1.api.aws",
                "hosted_zone_id": "Z07269682MXCQRD95UXON"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e4246ad194765a4b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0c1a68b35411c265f",
              "eni-0ec133e5deda7bb48"
            ],
            "owner_id": "288761763515",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-064db00218ee4df6e"
            ],
            "service_name": "com.amazonaws.eu-central-1.sqs",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.165",
                "subnet_id": "subnet-020c05c9ddb4354f9"
              },
              {
                "ipv4": "10.0.12.200",
                "subnet_id": "subnet-02e608ced5e035512"
              }
            ],
            "subnet_ids": [
              "subnet-020c05c9ddb4354f9",
              "subnet-02e608ced5e035512"
            ],
            "tags": {
              "Name": "cs3-nca-sqs-endpoint",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-sqs-endpoint",
              "Project": "cs3-nca"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-040596582b76660f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:vpc-endpoint/vpce-0f17af8cac43ac864",
            "dns_entry": [
              {
                "dns_name": "vpce-0f17af8cac43ac864-uph6r0fv.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0f17af8cac43ac864-uph6r0fv-eu-central-1a.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0f17af8cac43ac864-uph6r0fv-eu-central-1b.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ssm.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z01088593R0YWW339R9Q5"
              },
              {
                "dns_name": "ssm.eu-central-1.api.aws",
                "hosted_zone_id": "Z010885830RGVZN3ND934"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f17af8cac43ac864",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08adbe38318d35ba1",
              "eni-0ecd1533e48a4197f"
            ],
            "owner_id": "288761763515",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-064db00218ee4df6e"
            ],
            "service_name": "com.amazonaws.eu-central-1.ssm",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.208",
                "subnet_id": "subnet-020c05c9ddb4354f9"
              },
              {
                "ipv4": "10.0.12.123",
                "subnet_id": "subnet-02e608ced5e035512"
              }
            ],
            "subnet_ids": [
              "subnet-020c05c9ddb4354f9",
              "subnet-02e608ced5e035512"
            ],
            "tags": {
              "Name": "cs3-nca-ssm-endpoint",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-ssm-endpoint",
              "Project": "cs3-nca"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-040596582b76660f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:vpc-endpoint/vpce-0dbf5fcd16ee396a1",
            "dns_entry": [
              {
                "dns_name": "vpce-0dbf5fcd16ee396a1-dl8bxdg0.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0dbf5fcd16ee396a1-dl8bxdg0-eu-central-1a.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0dbf5fcd16ee396a1-dl8bxdg0-eu-central-1b.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ssmmessages.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z060860638Q2W2WPY2CSQ"
              },
              {
                "dns_name": "ssmmessages.eu-central-1.api.aws",
                "hosted_zone_id": "Z01083641NW3728EFIT9N"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0dbf5fcd16ee396a1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0c983301a4e2bc486",
              "eni-0eeae42e496acb50c"
            ],
            "owner_id": "288761763515",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-064db00218ee4df6e"
            ],
            "service_name": "com.amazonaws.eu-central-1.ssmmessages",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.21",
                "subnet_id": "subnet-020c05c9ddb4354f9"
              },
              {
                "ipv4": "10.0.12.24",
                "subnet_id": "subnet-02e608ced5e035512"
              }
            ],
            "subnet_ids": [
              "subnet-020c05c9ddb4354f9",
              "subnet-02e608ced5e035512"
            ],
            "tags": {
              "Name": "cs3-nca-ssmmessages-endpoint",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-ssmmessages-endpoint",
              "Project": "cs3-nca"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-040596582b76660f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:288761763515:vpc-endpoint/vpce-04b73c4d8c06f646a",
            "dns_entry": [
              {
                "dns_name": "vpce-04b73c4d8c06f646a-zvm06rv5.sts.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-04b73c4d8c06f646a-zvm06rv5-eu-central-1b.sts.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-04b73c4d8c06f646a-zvm06rv5-eu-central-1a.sts.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "sts.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z016847136IA8F7OMU27A"
              },
              {
                "dns_name": "sts.eu-central-1.api.aws",
                "hosted_zone_id": "Z09008962R8D6YXKT7PAC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04b73c4d8c06f646a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00934b4766f5a8d04",
              "eni-0f3f53e37e098ceba"
            ],
            "owner_id": "288761763515",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-064db00218ee4df6e"
            ],
            "service_name": "com.amazonaws.eu-central-1.sts",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.120",
                "subnet_id": "subnet-020c05c9ddb4354f9"
              },
              {
                "ipv4": "10.0.12.241",
                "subnet_id": "subnet-02e608ced5e035512"
              }
            ],
            "subnet_ids": [
              "subnet-020c05c9ddb4354f9",
              "subnet-02e608ced5e035512"
            ],
            "tags": {
              "Name": "cs3-nca-sts-endpoint",
              "Project": "cs3-nca"
            },
            "tags_all": {
              "Name": "cs3-nca-sts-endpoint",
              "Project": "cs3-nca"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-040596582b76660f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoints",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}